<resources>
    <string name="app_name">NovelForge</string>
</resources>
